@@ -1,3 +1,11 @@
+2005-06-09  David Vrabel  <dvrabel@arcom.com>
+
+	* src/xyzModem.c: Use the Ymodem length field by #define'ing
+	USE_YMODEM_LENGTH.
+	(xyzModem_stream_read): Only discard runs of ^Z's if we're using
+	Xmodem or the Ymodem length field is 0.  This allows binary files
+	with runs of ^Z's to be transferred.
+
 2005-06-07  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/flash.c (_flash_info): Fixed a warning about a diag_printf
